@@ -1,3 +1,10 @@
+2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>
+
+	* OggPlayer.cs: Added support for changing buffer size &
+	  number at runtime
+	Fixed 'Null Reference' bug caused by trying to raise events
+	  when the user wasn't catching them
+
 2010-04-23  El Dragon  <thedragon@the-dragons-nest.co.uk>
 
 	* OggFile.cs: Complete re-write of Tag handling. Added new tag
